// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/timeline/demo/basic.md correctly 1`] = `
<ul
  class="ant-timeline"
>
  <li
    class="ant-timeline-item"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-blue"
    />
    <div
      class="ant-timeline-item-content"
    >
      Create a services site 2015-09-01
    </div>
  </li>
  <li
    class="ant-timeline-item"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-blue"
    />
    <div
      class="ant-timeline-item-content"
    >
      Solve initial network problems 2015-09-01
    </div>
  </li>
  <li
    class="ant-timeline-item"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-blue"
    />
    <div
      class="ant-timeline-item-content"
    >
      Technical testing 2015-09-01
    </div>
  </li>
  <li
    class="ant-timeline-item ant-timeline-item-last"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-blue"
    />
    <div
      class="ant-timeline-item-content"
    >
      Network problems being solved 2015-09-01
    </div>
  </li>
</ul>
`;

exports[`renders ./components/timeline/demo/color.md correctly 1`] = `
<ul
  class="ant-timeline"
>
  <li
    class="ant-timeline-item"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-green"
    />
    <div
      class="ant-timeline-item-content"
    >
      Create a services site 2015-09-01
    </div>
  </li>
  <li
    class="ant-timeline-item"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-green"
    />
    <div
      class="ant-timeline-item-content"
    >
      Create a services site 2015-09-01
    </div>
  </li>
  <li
    class="ant-timeline-item"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-red"
    />
    <div
      class="ant-timeline-item-content"
    >
      <p>
        Solve initial network problems 1
      </p>
      <p>
        Solve initial network problems 2
      </p>
      <p>
        Solve initial network problems 3 2015-09-01
      </p>
    </div>
  </li>
  <li
    class="ant-timeline-item ant-timeline-item-last"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-blue"
    />
    <div
      class="ant-timeline-item-content"
    >
      <p>
        Technical testing 1
      </p>
      <p>
        Technical testing 2
      </p>
      <p>
        Technical testing 3 2015-09-01
      </p>
    </div>
  </li>
</ul>
`;

exports[`renders ./components/timeline/demo/custom.md correctly 1`] = `
<ul
  class="ant-timeline"
>
  <li
    class="ant-timeline-item"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-blue"
    />
    <div
      class="ant-timeline-item-content"
    >
      Create a services site 2015-09-01
    </div>
  </li>
  <li
    class="ant-timeline-item"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-blue"
    />
    <div
      class="ant-timeline-item-content"
    >
      Solve initial network problems 2015-09-01
    </div>
  </li>
  <li
    class="ant-timeline-item"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-custom ant-timeline-item-head-red"
    >
      <i
        class="anticon anticon-clock-circle-o"
        style="font-size:16px"
      />
    </div>
    <div
      class="ant-timeline-item-content"
    >
      Technical testing 2015-09-01
    </div>
  </li>
  <li
    class="ant-timeline-item ant-timeline-item-last"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-blue"
    />
    <div
      class="ant-timeline-item-content"
    >
      Network problems being solved 2015-09-01
    </div>
  </li>
</ul>
`;

exports[`renders ./components/timeline/demo/pending.md correctly 1`] = `
<ul
  class="ant-timeline ant-timeline-pending"
>
  <li
    class="ant-timeline-item"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-blue"
    />
    <div
      class="ant-timeline-item-content"
    >
      Create a services site 2015-09-01
    </div>
  </li>
  <li
    class="ant-timeline-item"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-blue"
    />
    <div
      class="ant-timeline-item-content"
    >
      Solve initial network problems 2015-09-01
    </div>
  </li>
  <li
    class="ant-timeline-item ant-timeline-item-last"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-blue"
    />
    <div
      class="ant-timeline-item-content"
    >
      Technical testing 2015-09-01
    </div>
  </li>
  <li
    class="ant-timeline-item ant-timeline-item-pending"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-custom ant-timeline-item-head-blue"
    >
      <i
        class="anticon anticon-spin anticon-loading"
      />
    </div>
    <div
      class="ant-timeline-item-content"
    >
      Recording...
    </div>
  </li>
</ul>
`;
